5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1716_2502.log
== TEST (2019-05-16 15:05:40) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0

while (c<n):
	x = ((-1)**i)*1/d*(3**e)
	d = d+2
	e = e+1
	pi = (12**(1/2))*x
	i = i+1
	c = c+1
print(round(pi, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:05:49) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0

while (c<n):
	x = ((-1)**i)*1/d*(3**e)
	d = d+2
	e = e+1
	pi = (12**(1/2))*x
	i = i+1
	c = c+1
print(round(pi, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:06:55) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0

while (c<n):
	x = ((-1)**i)*1/d*(3**e)
	d = d+2
	e = e+1
	pi = (12**(1/2))*x
	i = i+1
	c = c+1
print(round(pi, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:08:00) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0

while (c<n):
	x = ((-1)**i)*1/d*(3**e)
	pi = (12**(1/2))*x
	d = d+2
	e = e+1
	i = i+1
	c = c+1
print(round(pi, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:09:31) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0

while (c<n):
	pi = (12**(1/2))
	x = ((-1)**i)*1/d*(3**e)
	y = pi*x
	d = d+2
	e = e+1
	i = i+1
	c = c+1
print(round(y, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:10:30) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0

while (c<n):
	pi = (12**(1/2))
	x = ((-1)**i)*1/(d*(3**e))
	y = pi*x
	d = d+2
	e = e+1
	i = i+1
	c = c+1
print(round(y, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:10:37) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0

while (c<n):
	pi = (12**(1/2))
	x = ((-1)**i)*1/(d*(3**e))
	y = pi*x
	d = d+2
	e = e+1
	i = i+1
	c = c+1
print(round(y, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:13:41) 
-- CODE:
n = int(input('N: '))
e = 0
d = 1
c = 0
i = 0
pi = (12**(1/2))

while (c<n):
	x = ((-1)**i)*1/(d*(3**e))
	d = d+2
	e = e+1
	i = i+1
	c = c+1
y = pi*x
print(round(y, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:07) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 0
i = 1
pi = sqrt(12)
x = 1/(d*(3**0))

while (c<n):
	x = x+((-1)**i)*1/(d*(3**e))
	d = d+2
	e = e+1
	i = i+1
	c = c+1
y = pi*x
print(round(y, 8))
-- OUTPUT:
0.83219138
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:23) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 0
i = 1
pi = sqrt(12)
x = 1/(d*(3**0))

while (c<n):
	x = x+((-1)**i)*1/(d*(3**e))
	d = d+2
	e = e+1
	i = i+1
	c = c+1
y = pi+x
print(round(y, 8))
-- OUTPUT:
3.70433457
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:24:08) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 0
i = 1
pi = sqrt(12)
x = 1/(d*(3**0))

while (c<n):
	x = x+((i)*1/(d*(3**e))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi+x
print(round(y, 8))
-- ERROR:
File "XXXX", line 12
    d = d+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:24:29) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 0
i = 1
pi = sqrt(12)
x = 1/(d*(3**0))

while (c<n):
	x = x+((i)*1/(d*(3**e)))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi+x
print(round(y, 8))
-- OUTPUT:
3.89053532
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:25:50) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 0
i = 1
pi = sqrt(12)
x = 1/(1*(3**0))

while (c<n):
	x = x+((i)*1/(d*(3**e)))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi+x
print(round(y, 8))
-- OUTPUT:
4.55720199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:51) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 0
i = -1
pi = sqrt(12)
x = 1/(1*(3**0))

while (c<n):
	x = x+((i)*1/(d*(3**e)))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi+x
print(round(y, 8))
-- OUTPUT:
4.37100124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:27:44) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 0
i = -1
pi = sqrt(12)
x = 1/(1*(3**0))

while (c<n):
	x = x+((i)*(1/(d*(3**e))))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi+x
print(round(y, 8))
-- OUTPUT:
4.37100124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:30:00) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 1
i = -1
pi = sqrt(12)
x = 1/(1*(3**0))

while (c<n):
	x = x+((i)*(1/(d*(3**e))))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi+x
print(round(y, 8))
-- OUTPUT:
4.37100149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:31:37) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 1
i = -1
pi = sqrt(12)
x = 1/(1*(3**0))

while (c<n):
	x = x+((i)*(1/(d*(3**e))))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi*x
print(round(y, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:47) 
-- CODE:
from math import *
n = int(input('N: '))
e = 1
d = 3
c = 1
i = -1
pi = sqrt(12)
x = 1/(1*(3**0))

while (c<n):
	x = x+((i)*(1/(d*(3**e))))
	d = d+2
	e = e+1
	i *=-1
	c = c+1
y = pi*x
print(round(y, 8))
-- EXECUTION TIME:
0.190046
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
